<resources>
    <string name="app_name">GWeather</string>
    <string name="location">location</string>
    <string name="temperature">temperature</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="week_day">MON</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next">Tomorrow + 1</string>

    <string name="cond_txt_d">cond_txt_d</string>
    <string name="date">date</string>
    <string name="hum">hum</string>
    <string name="mr">mr</string>
    <string name="ms">ms</string>
    <string name="pcpn">pcpn</string>
    <string name="pop">pop</string>
    <string name="pres">pres</string>
    <string name="sr">sr</string>
    <string name="ss">ss</string>
    <string name="tmp_max">tmp_max</string>
    <string name="tmp_min">tmp_min</string>
    <string name="uv_index">uv_index</string>
    <string name="vis">vis</string>
    <string name="wind_deg">wind_deg</string>
    <string name="wind_dir">wind_dir</string>
    <string name="wind_sc">wind_deg</string>
    <string name="wind_spd">wind_dir</string>

</resources>